Control Plane status in DSC object (#24923)
* Proto for control plane status

* Including address family in control plane status

* Control Plane status implementation

* Moving out the unhealthy services and venice connectivity fields from control plane status

* Some build fixes

* Fixing a crash
