# api/generated/cluster/smartnic_schema.go
@@ -41,6 +41,12 @@ var typesMapSmartnic = map[string]*api.Struct{
 			"Message": api.Field{Name: "Message", CLITag: api.CLIInfo{ID: "message", Path: "", Skip: false, Insert: "", Help: ""}, JSONTag: "message", Pointer: false, Slice: false, Mutable: true, Map: false, Inline: false, FromInline: false, KeyType: "", Type: "TYPE_STRING"},
 		},
 	},
+	"cluster.DSCControlPlaneStatus": &api.Struct{
+		Kind: "", APIGroup: "", Scopes: []string{}, GetTypeFn: func() reflect.Type { return reflect.TypeOf(DSCControlPlaneStatus{}) },
+		Fields: map[string]api.Field{
+			"BGPStatus": api.Field{Name: "BGPStatus", CLITag: api.CLIInfo{ID: "bgp-status", Path: "", Skip: false, Insert: "", Help: ""}, JSONTag: "bgp-status", Pointer: true, Slice: true, Mutable: true, Map: false, Inline: false, FromInline: false, KeyType: "", Type: "cluster.PeerStatus"},
+		},
+	},
 	"cluster.DSCInfo": &api.Struct{
 		Kind: "", APIGroup: "", Scopes: []string{}, GetTypeFn: func() reflect.Type { return reflect.TypeOf(DSCInfo{}) },
 		Fields: map[string]api.Field{
@@ -92,45 +98,51 @@ var typesMapSmartnic = map[string]*api.Struct{
 		},
 
 		CLITags: map[string]api.CLIInfo{
-			"DSCSku":               api.CLIInfo{Path: "Status.DSCSku", Skip: false, Insert: "", Help: ""},
-			"DSCVersion":           api.CLIInfo{Path: "Status.DSCVersion", Skip: false, Insert: "", Help: ""},
-			"adm-phase-reason":     api.CLIInfo{Path: "Status.AdmissionPhaseReason", Skip: false, Insert: "", Help: ""},
-			"admission-phase":      api.CLIInfo{Path: "Status.AdmissionPhase", Skip: false, Insert: "", Help: ""},
-			"admit":                api.CLIInfo{Path: "Spec.Admit", Skip: false, Insert: "", Help: ""},
-			"api-version":          api.CLIInfo{Path: "APIVersion", Skip: false, Insert: "", Help: ""},
-			"controllers":          api.CLIInfo{Path: "Spec.Controllers", Skip: false, Insert: "", Help: ""},
-			"default-gw":           api.CLIInfo{Path: "Spec.IPConfig.DefaultGW", Skip: false, Insert: "", Help: ""},
-			"dns-servers":          api.CLIInfo{Path: "Spec.IPConfig.DNSServers", Skip: false, Insert: "", Help: ""},
-			"dscprofile":           api.CLIInfo{Path: "Spec.DSCProfile", Skip: false, Insert: "", Help: ""},
-			"fw-major-ver":         api.CLIInfo{Path: "Status.SystemInfo.BiosInfo.FwMajorVersion", Skip: false, Insert: "", Help: ""},
-			"fw-minor-ver":         api.CLIInfo{Path: "Status.SystemInfo.BiosInfo.FwMinorVersion", Skip: false, Insert: "", Help: ""},
-			"generation-id":        api.CLIInfo{Path: "GenerationID", Skip: false, Insert: "", Help: ""},
-			"host":                 api.CLIInfo{Path: "Status.Host", Skip: false, Insert: "", Help: ""},
-			"id":                   api.CLIInfo{Path: "Spec.ID", Skip: false, Insert: "", Help: ""},
-			"interfaces":           api.CLIInfo{Path: "Status.Interfaces", Skip: false, Insert: "", Help: ""},
-			"ip-address":           api.CLIInfo{Path: "Spec.IPConfig.IPAddress", Skip: false, Insert: "", Help: ""},
-			"kind":                 api.CLIInfo{Path: "Kind", Skip: false, Insert: "", Help: ""},
-			"labels":               api.CLIInfo{Path: "Labels", Skip: false, Insert: "", Help: ""},
-			"last-transition-time": api.CLIInfo{Path: "Status.Conditions[].LastTransitionTime", Skip: false, Insert: "", Help: ""},
-			"message":              api.CLIInfo{Path: "Status.Conditions[].Message", Skip: false, Insert: "", Help: ""},
-			"mgmt-mode":            api.CLIInfo{Path: "Spec.MgmtMode", Skip: false, Insert: "", Help: ""},
-			"mgmt-vlan":            api.CLIInfo{Path: "Spec.MgmtVlan", Skip: false, Insert: "", Help: ""},
-			"name":                 api.CLIInfo{Path: "Name", Skip: false, Insert: "", Help: ""},
-			"namespace":            api.CLIInfo{Path: "Namespace", Skip: false, Insert: "", Help: ""},
-			"network-mode":         api.CLIInfo{Path: "Spec.NetworkMode", Skip: false, Insert: "", Help: ""},
-			"primary-mac":          api.CLIInfo{Path: "Status.PrimaryMAC", Skip: false, Insert: "", Help: ""},
-			"reason":               api.CLIInfo{Path: "Status.Conditions[].Reason", Skip: false, Insert: "", Help: ""},
-			"resource-version":     api.CLIInfo{Path: "ResourceVersion", Skip: false, Insert: "", Help: ""},
-			"routing-config":       api.CLIInfo{Path: "Spec.RoutingConfig", Skip: false, Insert: "", Help: ""},
-			"self-link":            api.CLIInfo{Path: "SelfLink", Skip: false, Insert: "", Help: ""},
-			"serial-num":           api.CLIInfo{Path: "Status.SerialNum", Skip: false, Insert: "", Help: ""},
-			"status":               api.CLIInfo{Path: "Status.Conditions[].Status", Skip: false, Insert: "", Help: ""},
-			"tenant":               api.CLIInfo{Path: "Tenant", Skip: false, Insert: "", Help: ""},
-			"type":                 api.CLIInfo{Path: "Status.Conditions[].Type", Skip: false, Insert: "", Help: ""},
-			"uuid":                 api.CLIInfo{Path: "UUID", Skip: false, Insert: "", Help: ""},
-			"vendor":               api.CLIInfo{Path: "Status.SystemInfo.BiosInfo.Vendor", Skip: false, Insert: "", Help: ""},
-			"version":              api.CLIInfo{Path: "Status.SystemInfo.BiosInfo.Version", Skip: false, Insert: "", Help: ""},
-			"version-mismatch":     api.CLIInfo{Path: "Status.VersionMismatch", Skip: false, Insert: "", Help: ""},
+			"DSCSku":                 api.CLIInfo{Path: "Status.DSCSku", Skip: false, Insert: "", Help: ""},
+			"DSCVersion":             api.CLIInfo{Path: "Status.DSCVersion", Skip: false, Insert: "", Help: ""},
+			"address-families":       api.CLIInfo{Path: "Status.ControlPlaneStatus.BGPStatus[].AddressFamilies", Skip: false, Insert: "", Help: ""},
+			"adm-phase-reason":       api.CLIInfo{Path: "Status.AdmissionPhaseReason", Skip: false, Insert: "", Help: ""},
+			"admission-phase":        api.CLIInfo{Path: "Status.AdmissionPhase", Skip: false, Insert: "", Help: ""},
+			"admit":                  api.CLIInfo{Path: "Spec.Admit", Skip: false, Insert: "", Help: ""},
+			"api-version":            api.CLIInfo{Path: "APIVersion", Skip: false, Insert: "", Help: ""},
+			"controllers":            api.CLIInfo{Path: "Spec.Controllers", Skip: false, Insert: "", Help: ""},
+			"default-gw":             api.CLIInfo{Path: "Spec.IPConfig.DefaultGW", Skip: false, Insert: "", Help: ""},
+			"dns-servers":            api.CLIInfo{Path: "Spec.IPConfig.DNSServers", Skip: false, Insert: "", Help: ""},
+			"dscprofile":             api.CLIInfo{Path: "Spec.DSCProfile", Skip: false, Insert: "", Help: ""},
+			"fw-major-ver":           api.CLIInfo{Path: "Status.SystemInfo.BiosInfo.FwMajorVersion", Skip: false, Insert: "", Help: ""},
+			"fw-minor-ver":           api.CLIInfo{Path: "Status.SystemInfo.BiosInfo.FwMinorVersion", Skip: false, Insert: "", Help: ""},
+			"generation-id":          api.CLIInfo{Path: "GenerationID", Skip: false, Insert: "", Help: ""},
+			"host":                   api.CLIInfo{Path: "Status.Host", Skip: false, Insert: "", Help: ""},
+			"id":                     api.CLIInfo{Path: "Spec.ID", Skip: false, Insert: "", Help: ""},
+			"interfaces":             api.CLIInfo{Path: "Status.Interfaces", Skip: false, Insert: "", Help: ""},
+			"ip-address":             api.CLIInfo{Path: "Spec.IPConfig.IPAddress", Skip: false, Insert: "", Help: ""},
+			"is-connected-to-venice": api.CLIInfo{Path: "Status.IsConnectedToVenice", Skip: false, Insert: "", Help: ""},
+			"kind":                   api.CLIInfo{Path: "Kind", Skip: false, Insert: "", Help: ""},
+			"labels":                 api.CLIInfo{Path: "Labels", Skip: false, Insert: "", Help: ""},
+			"last-transition-time":   api.CLIInfo{Path: "Status.Conditions[].LastTransitionTime", Skip: false, Insert: "", Help: ""},
+			"message":                api.CLIInfo{Path: "Status.Conditions[].Message", Skip: false, Insert: "", Help: ""},
+			"mgmt-mode":              api.CLIInfo{Path: "Spec.MgmtMode", Skip: false, Insert: "", Help: ""},
+			"mgmt-vlan":              api.CLIInfo{Path: "Spec.MgmtVlan", Skip: false, Insert: "", Help: ""},
+			"name":                   api.CLIInfo{Path: "Name", Skip: false, Insert: "", Help: ""},
+			"namespace":              api.CLIInfo{Path: "Namespace", Skip: false, Insert: "", Help: ""},
+			"network-mode":           api.CLIInfo{Path: "Spec.NetworkMode", Skip: false, Insert: "", Help: ""},
+			"peer-address":           api.CLIInfo{Path: "Status.ControlPlaneStatus.BGPStatus[].PeerAddress", Skip: false, Insert: "", Help: ""},
+			"primary-mac":            api.CLIInfo{Path: "Status.PrimaryMAC", Skip: false, Insert: "", Help: ""},
+			"reason":                 api.CLIInfo{Path: "Status.Conditions[].Reason", Skip: false, Insert: "", Help: ""},
+			"remote-asn":             api.CLIInfo{Path: "Status.ControlPlaneStatus.BGPStatus[].RemoteASN", Skip: false, Insert: "", Help: ""},
+			"resource-version":       api.CLIInfo{Path: "ResourceVersion", Skip: false, Insert: "", Help: ""},
+			"routing-config":         api.CLIInfo{Path: "Spec.RoutingConfig", Skip: false, Insert: "", Help: ""},
+			"self-link":              api.CLIInfo{Path: "SelfLink", Skip: false, Insert: "", Help: ""},
+			"serial-num":             api.CLIInfo{Path: "Status.SerialNum", Skip: false, Insert: "", Help: ""},
+			"state":                  api.CLIInfo{Path: "Status.ControlPlaneStatus.BGPStatus[].State", Skip: false, Insert: "", Help: ""},
+			"status":                 api.CLIInfo{Path: "Status.Conditions[].Status", Skip: false, Insert: "", Help: ""},
+			"tenant":                 api.CLIInfo{Path: "Tenant", Skip: false, Insert: "", Help: ""},
+			"type":                   api.CLIInfo{Path: "Status.Conditions[].Type", Skip: false, Insert: "", Help: ""},
+			"unhealthy-services":     api.CLIInfo{Path: "Status.UnhealthyServices", Skip: false, Insert: "", Help: ""},
+			"uuid":                   api.CLIInfo{Path: "UUID", Skip: false, Insert: "", Help: ""},
+			"vendor":                 api.CLIInfo{Path: "Status.SystemInfo.BiosInfo.Vendor", Skip: false, Insert: "", Help: ""},
+			"version":                api.CLIInfo{Path: "Status.SystemInfo.BiosInfo.Version", Skip: false, Insert: "", Help: ""},
+			"version-mismatch":       api.CLIInfo{Path: "Status.VersionMismatch", Skip: false, Insert: "", Help: ""},
 		},
 	},
 	"cluster.DistributedServiceCardSpec": &api.Struct{
@@ -181,6 +193,12 @@ var typesMapSmartnic = map[string]*api.Struct{
 			"AdmissionPhaseReason": api.Field{Name: "AdmissionPhaseReason", CLITag: api.CLIInfo{ID: "adm-phase-reason", Path: "", Skip: false, Insert: "", Help: ""}, JSONTag: "adm-phase-reason", Pointer: false, Slice: false, Mutable: true, Map: false, Inline: false, FromInline: false, KeyType: "", Type: "TYPE_STRING"},
 
 			"VersionMismatch": api.Field{Name: "VersionMismatch", CLITag: api.CLIInfo{ID: "version-mismatch", Path: "", Skip: false, Insert: "", Help: ""}, JSONTag: "version-mismatch", Pointer: false, Slice: false, Mutable: true, Map: false, Inline: false, FromInline: false, KeyType: "", Type: "TYPE_BOOL"},
+
+			"ControlPlaneStatus": api.Field{Name: "ControlPlaneStatus", CLITag: api.CLIInfo{ID: "control-plane-status", Path: "", Skip: false, Insert: "", Help: ""}, JSONTag: "control-plane-status", Pointer: true, Slice: false, Mutable: true, Map: false, Inline: false, FromInline: false, KeyType: "", Type: "cluster.DSCControlPlaneStatus"},
+
+			"IsConnectedToVenice": api.Field{Name: "IsConnectedToVenice", CLITag: api.CLIInfo{ID: "is-connected-to-venice", Path: "", Skip: false, Insert: "", Help: ""}, JSONTag: "is-connected-to-venice", Pointer: false, Slice: false, Mutable: true, Map: false, Inline: false, FromInline: false, KeyType: "", Type: "TYPE_BOOL"},
+
+			"UnhealthyServices": api.Field{Name: "UnhealthyServices", CLITag: api.CLIInfo{ID: "unhealthy-services", Path: "", Skip: false, Insert: "", Help: ""}, JSONTag: "unhealthy-services", Pointer: false, Slice: true, Mutable: true, Map: false, Inline: false, FromInline: false, KeyType: "", Type: "TYPE_STRING"},
 		},
 	},
 	"cluster.IPConfig": &api.Struct{
@@ -199,6 +217,18 @@ var typesMapSmartnic = map[string]*api.Struct{
 			"Start": api.Field{Name: "Start", CLITag: api.CLIInfo{ID: "mac-start", Path: "", Skip: false, Insert: "", Help: ""}, JSONTag: "mac-start", Pointer: false, Slice: false, Mutable: true, Map: false, Inline: false, FromInline: false, KeyType: "", Type: "TYPE_STRING"},
 
 			"End": api.Field{Name: "End", CLITag: api.CLIInfo{ID: "mac-end", Path: "", Skip: false, Insert: "", Help: ""}, JSONTag: "mac-end", Pointer: false, Slice: false, Mutable: true, Map: false, Inline: false, FromInline: false, KeyType: "", Type: "TYPE_STRING"},
+		},
+	},
+	"cluster.PeerStatus": &api.Struct{
+		Kind: "", APIGroup: "", Scopes: []string{}, GetTypeFn: func() reflect.Type { return reflect.TypeOf(PeerStatus{}) },
+		Fields: map[string]api.Field{
+			"PeerAddress": api.Field{Name: "PeerAddress", CLITag: api.CLIInfo{ID: "peer-address", Path: "", Skip: false, Insert: "", Help: ""}, JSONTag: "peer-address", Pointer: false, Slice: false, Mutable: true, Map: false, Inline: false, FromInline: false, KeyType: "", Type: "TYPE_STRING"},
+
+			"State": api.Field{Name: "State", CLITag: api.CLIInfo{ID: "state", Path: "", Skip: false, Insert: "", Help: ""}, JSONTag: "state", Pointer: false, Slice: false, Mutable: true, Map: false, Inline: false, FromInline: false, KeyType: "", Type: "TYPE_STRING"},
+
+			"RemoteASN": api.Field{Name: "RemoteASN", CLITag: api.CLIInfo{ID: "remote-asn", Path: "", Skip: false, Insert: "", Help: ""}, JSONTag: "remote-asn", Pointer: false, Slice: false, Mutable: true, Map: false, Inline: false, FromInline: false, KeyType: "", Type: "TYPE_UINT32"},
+
+			"AddressFamilies": api.Field{Name: "AddressFamilies", CLITag: api.CLIInfo{ID: "address-families", Path: "", Skip: false, Insert: "", Help: ""}, JSONTag: "address-families", Pointer: false, Slice: true, Mutable: true, Map: false, Inline: false, FromInline: false, KeyType: "", Type: "TYPE_STRING"},
 		},
 	},
 }
