# venice/cmd/grpc/server/smartnic/smartnic.go
@@ -288,6 +288,9 @@ func (s *RPCServer) UpdateSmartNIC(updObj *cluster.DistributedServiceCard) (*clu
 			}
 		}
 		refObj.Status.Conditions = updObj.Status.Conditions
+		refObj.Status.ControlPlaneStatus = updObj.Status.ControlPlaneStatus
+		refObj.Status.IsConnectedToVenice = updObj.Status.IsConnectedToVenice
+		refObj.Status.UnhealthyServices = updObj.Status.UnhealthyServices
 		//reset versionMismatch & AdmissionPhaseReason if the nic is running the right version
 		if refObj.Status.VersionMismatch {
 			status, veniceVersion := s.versionChecker.CheckNICVersionForAdmission(refObj.Status.GetDSCSku(), refObj.Status.GetDSCVersion())
